# swagger.yaml
@@ -7,11 +7,20 @@ info:
 servers:
   - url: http://localhost:3000
 
+components:
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
 paths:
   /api/product-search:
     get:
       summary: Search for products
       description: Retrieve a list of products based on the provided search criteria.
+      security:
+        - BearerAuth: [] 
       parameters:
         - name: keyword
           in: query
@@ -56,14 +65,14 @@ paths:
           required: false
           schema:
             type: integer
-        - name: price_above
+        - name: min_price
           in: query
           description: Filter products with a price equal or above this value.
           required: false
           schema:
             type: number
             format: float
-        - name: price_below
+        - name: max_price
           in: query
           description: Filter products with a price equal or below this value.
           required: false
@@ -113,5 +122,7 @@ paths:
                           description: URL of the product image
         '400':
           description: Bad request, invalid parameters.
+        '401':
+          description: Unauthorized, invalid token or no token provided.
         '500':
           description: Internal server error.
